--- a/templates/settings.html
+++ b/templates/settings.html
@@ -18,10 +18,10 @@
     </div>
     <div class="row">
         <div class="col-2">
-            <img alt="avatar" class="rounded-circle" src="/static/{{ user.avatar }}">
+            <img alt="avatar" class="rounded-circle" src="{{ user.avatar }}">
         </div>
         <div class="col-3">
-            <h2>имя: {{user.name}}</h2>
+            <h2>Имя: {{user.name}}</h2>
         </div>
         <div class="col-7">
             <h2>Почта: {{user.email}}</h2>
@@ -38,6 +38,6 @@
     <a class="btn btn-danger" href="/logout">Выйти</a>
     <a class="btn btn-danger" href="/settings/delete">Удалить аккаунт</a>
     <a class="btn btn-success" href="/settings/edit">Изменить</a>
-    <a class="btn btn-success" href="/search/%{{user.email}}">Посмотреть мои объявления</a>
+    <a class="btn btn-success" href="/search/&{{user.email}}">Посмотреть мои объявления</a>
 </div>
 {% endblock %}
