--- a/templates/advertisement.html
+++ b/templates/advertisement.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="col-md6 border rounded" style="padding:1% 2%; margin:1% 2%; background: white;">
 <h1>Добавление новости</h1>
-<form action="" method="post" enctype="multipart/form-data">
+<form action="" method="post" enctype="multipart/form-data" class="file_form">
     {{ form.hidden_tag() }}
     <p>
         {{ form.title.label }}<br>
